tests/baselines/reference/importTypeGeneric.errors.txt
usage.ts(1,67): error TS1141: String literal expected.
usage.ts(5,72): error TS1141: String literal expected.


==== a.d.ts (0 errors) ====
    export interface Foo {
        a: string;
    }
==== b.d.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
==== usage.ts (2 errors) ====
    export function getFooFrom<T extends "./a" | "./b">(v: T): import(T).Foo {
                                                                      ~
!!! error TS1141: String literal expected.
        return undefined as any;
    }
    
    export function getFooValueFrom<T extends "./a" | "./b">(v: T): import(T).Foo["a"] {
                                                                           ~
!!! error TS1141: String literal expected.
        return undefined as any;
    }
    